Added Feature - Add Ingredient to Shopping List

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a (click)="addIngredientToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -31,6 +31,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group" > 
+      <li *ngFor="let ingredient of recipeDetailInRecipeDetailComponent.ingredients" class="list-group-item"> {{ ingredient.name }} - {{ ingredient.amount }} </li>
+    </ul>
   </div>
 </div>
