--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,8 @@
-<a (click)="onRecipeSelected()"
-href="#"
+<!--(click)="onRecipeSelected()" Before implementing Routing-->
+<a 
+[routerLink]="[idx]"
+routerLinkActive="active"
+style="cursor: pointer;"
 class="list-group-item clearfix"
 >
 <div class="pull-left">
