--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <!--<app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>     Was used before using routing  -->  
+      <router-outlet></router-outlet>
      </div>
   </div>
 </div>
